[package]
name = "catbox-scraper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "catbox.moe file scraper, rewritten properly"
readme = "README.md"
license = "WTFPL"
publish = false
default-run = "catbox-scraper"

[dependencies]
rand = "0.9"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }


[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
