[package]
name = "catbox-scraper"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "brute-force file scraper for catbox.moe"
repository = "https://github.com/sigkillme0/catbox-scraper"
readme = "README.md"
license-file = "LICENSE"
publish = false
exclude = ["/data", "config.toml"]

[dependencies]
rand = "0.9"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "time",
  "signal",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
